# UrbanEase-Store-Analytics-and-Advanced-Management-System

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  data.txt  docker-compose.yaml
.github/workflows/: build.yml
files/: data.txt
files/charts/: chart_clusters.html  chart_comparison.html  chart_store.html
headers/: analytics.h  cluster.h  helper.h  report.h  stakeholder.h  store.h  visual.h
headers/cluster/: cluster.h
headers/report/: report.h
headers/stakeholder/: stakeholder.h
headers/stores/: store.h
source/: header.h  main.cpp
src/: main.cpp
src/analytics/: analytics.cpp
src/cluster/: cluster.cpp  subcluster.cpp
src/helper/: helper.cpp
src/report/: forecast.cpp  report.cpp
src/stakeholder/: employee.cpp  manager.cpp  person.cpp
src/stores/: coordinates.cpp  store.cpp
src/visualization/: visual.cpp
